# MQL5GPULibrary_LSTM

./: GITHUB_DESCRIPTION.txt  LICENSE.txt  MQL5GPULibrary_LSTM.sln  MQL5GPULibrary_LSTM.vcxproj  func_docu.md  kernel.cu  readme.md
MQL5/Experts/: LSTM_Pure_MTF_EA.mq5
MQL5/Indicators/: LSTMTrendStart.mq5  LSTM_EntropyGated_Predictor_v4_3.mq5  LSTM_MTF_Predictor_20percent_Shanon_FIX.mq5  LSTM_Pure_MTF_EA.mq5  LSTM_RealTimePredictor.ex5  LSTM_RealTimePredictor.mq5
MQL5/Indicators/Examples/: LSTM_PatternCompletion_Demo.mq5
docs/: app.js  index.html
unit_tests/: CMakeLists.txt  README.md  kernel_api_tests.cpp
